修改公式格式

--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -162,19 +162,19 @@ The actual proof from my [Master's Thesis](https://supermemo.guru/wiki/Optimizat
 >   - I(n) - 现在的最佳间隔
 >   - n - 在回答问题的时刻之前重复的次数等。
 >
-> Let us now see if the above variables are necessary and sufficient to characterize the state of synapses in the process of time-optimal learning. To show that variables are independent, we will show that none of them can be calculated from the other. Let us notice that the I(n) parameter remains constant during a given inter-repetition interval, while the Te parameter changes from zero to I(n). This shows that there is no function f that satisfies the condition:
+> Let us now see if the above variables are necessary and sufficient to characterize the state of synapses in the process of time-optimal learning. To show that variables are independent, we will show that none of them can be calculated from the other. Let us notice that the I(n) parameter remains constant during a given inter-repetition interval, while the `$ T_e $` parameter changes from zero to I(n). This shows that there is no function f that satisfies the condition:
 >
 > 现在让我们看看上述变量是否充分必要地描述突触在时间最优学习过程中的状态。为了说明变量是相互独立的，我们将说明它们之间没有一个可以相互计算。让我们注意到，在给定的重复间隔内，I(n) 参数保持不变，而 `$ T_e $` 参数从 0 变为 I(n)。这表明没有满足条件的函数 f：
 >
 > > `$ T_e=f(I(n)) $`
 >
-> On the other hand, at the moment of subsequent repetitions, Te always equals zero while I(n) has always a different, increasing value. Therefore there is no function g that satisfies the condition:
+> On the other hand, at the moment of subsequent repetitions, `$ T_e $` always equals zero while I(n) has always a different, increasing value. Therefore there is no function g that satisfies the condition:
 >
-> 另一方面，在随后的重复时刻，Te 总是等于零，而 I(n) 总是有一个不同的、递增的值。因此，不存在满足条件的函数 g：
+> 另一方面，在随后的重复时刻，`$ T_e $` 总是等于零，而 I(n) 总是有一个不同的、递增的值。因此，不存在满足条件的函数 g：
 >
 > > `$ I(n)=g(T_e) $`
 >
-> Hence independence of I(n) and Te.
+> Hence independence of I(n) and `$ T_e $`.
 >
 > 因此 I(n) 和 `$ T_e $` 是独立的。
 >
@@ -184,7 +184,7 @@ The actual proof from my [Master's Thesis](https://supermemo.guru/wiki/Optimizat
 >
 > 1. Let there elapse I(n)-`$ T_e $` days.
 > 2. Let there be a repetition.
-> 3. Let Te be zero and I(n) increase C times.
+> 3. Let `$ T_e $` be zero and I(n) increase C times.
 > 4. Go to 1.
 >
 > 1. 经过 I(n)-`$ T_e $` 天
@@ -255,9 +255,9 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > 1. We want to determine the set of (molecular) variables involved in storing memory traces that will suffice to account for the optimum spacing of repetitions. Let us, initially, assume two correlates of these variables in learning that is subject to optimum spacing as expressed by Eqns. (1) and (2):
 >
->       		*r* - time which remains from the present moment until the end of the current optimum interval (optimum interval is the interval at the end of which the retention drops to the previously defined level, e.g. 95%)
+>       		`$ r $` - time which remains from the present moment until the end of the current optimum interval (optimum interval is the interval at the end of which the retention drops to the previously defined level, e.g. 95%)
 >
->       		*s* - length of the current optimum interval.
+>       		`$ s $` - length of the current optimum interval.
 >
 > 2. Just at the onset of the i-th repetition, `$ r=0 $`, while `$ s_i>s_i-1>0 $` (`$ s_i $` denotes `$ s $` right at the onset of the i-th repetition). This indicates that there is no function `$ g_1 $` such that `$ s=g_1(r) $`, i.e. `$ s $` cannot be a function of `$ r $` only.
 >
@@ -277,9 +277,9 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 
 > 1. 我们想要确定存储记忆痕迹所涉及的(分子)变量集，这些变量足以说明最佳重复间隔。首先，让我们假设这些变量在学习中的两个相关性，它们受制于公式(1)及(2)所表示的最佳间距：
 >
->       		r - 从当前时刻到当前最佳间隔结束的剩余时间(最佳间隔是指保留率在结束时降至先前定义的水平的间隔，例如 95%)。
+>       		`$ r $` - 从当前时刻到当前最佳间隔结束的剩余时间(最佳间隔是指保留率在结束时降至先前定义的水平的间隔，例如 95%)。
 >
->       		s - 当前最佳间隔的长度。
+>       		`$ s $` - 当前最佳间隔的长度。
 >
 > 2. 仅在第 i 次重复开始时，`$ r=0 $`，而 `$ s_i>s_i-1>0 $` (`$ s_i $` 表示正好在第 i 次重复开始时的 `$ s $`)。这表明没有函数 `$ g_1 $` 使得 `$ s=g_1(R) $`，即 `$ s $` 不能只是 `$ r $` 的函数。
 >
@@ -298,9 +298,9 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >    7. 回到 2
 >    
 >
-> The above reasoning shows that variables *r* and *s* form a sufficient set of independent variables needed to compute the optimum spacing of repetitions. Obviously, using a set of transformation functions of the form *r*’’=Tr(*r*’) and *s*’’=Ts(*s*’), one can conceive an infinite family of variable pairs *r*-*s* that could describe the status of the memory system. A difficult choice remains to choose such a pair *r*-*s* that will most conveniently correspond with molecular phenomena occurring at the level of the synapse.
+> The above reasoning shows that variables *r* and *s* form a sufficient set of independent variables needed to compute the optimum spacing of repetitions. Obviously, using a set of transformation functions of the form `$ r’’=Tr(r’) $` and `$ s’’=Ts(s’) $`, one can conceive an infinite family of variable pairs *r*-*s* that could describe the status of the memory system. A difficult choice remains to choose such a pair *r*-*s* that will most conveniently correspond with molecular phenomena occurring at the level of the synapse.
 >
-> 上述推理表明，变量 r 和 s 形成了计算最佳重复间隔所需的足够的自变量集合。显然，使用形式为 r''=Tr(r') 和 s''=ts(s'') 的一组变换函数，可以设想可以描述记忆系统状态的变量对 r-s 的无穷族。一个困难的选择仍然是选择这样一对 r-s，它将最方便地与突触水平上发生的分子现象相对应。
+> 上述推理表明，变量 r 和 s 形成了计算最佳重复间隔所需的足够的自变量集合。显然，使用形式为 `$ r’’=Tr(r’) $` 和 `$ s’’=Ts(s’) $` 的一组变换函数，可以设想可以描述记忆系统状态的变量对 r-s 的无穷族。一个困难的选择仍然是选择这样一对 r-s，它将最方便地与突触水平上发生的分子现象相对应。
 >
 > The following terminology and interpretation is proposed by the authors in a memory system involving the existence of the *r*-*s* pair of variables: the variable R, retrievability, determines the probability with which a given memory trace can be invoked at a given moment, while the variable S, stability of memory, determines the rate of decline of retrievability as a result of forgetting, and consequently the length of inter-repetition intervals in the optimum spacing of repetitions.
 >
