更改小错误

--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -229,7 +229,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 
 > It has been found in earlier research that the [optimum spacing of repetitions](https://supermemo.guru/wiki/Spaced_repetition) in paired-associate learning, understood as the spacing which takes a minimum number of repetitions to indefinitely maintain a constant level of knowledge retention (e.g. 95%), can roughly be expressed using the following formulae ([Wozniak and Gorzelanczyk 1994](https://supermemo.guru/wiki/Optimization_of_repetition_spacing_in_the_practice_of_learning)):
 >
-> 在早期的研究中已经发现，配对联想学习中的最佳重复间隔，理解为需要最小重复次数才能无限期地保持恒定的知识保持水平(例如95%)的间隔，可以用以下公式大致表示([Wozniak 和 Gorzelanczyk，1994](https://supermemo.guru/wiki/Optimization_of_repetition_spacing_in_the_practice_of_learning))：
+> 在早期的研究中已经发现，配对联想学习中的最佳重复间隔，理解为需要最小重复次数才能无限期地保持恒定的知识保持水平(例如 95%)的间隔，可以用以下公式大致表示([Wozniak 和 Gorzelanczyk，1994](https://supermemo.guru/wiki/Optimization_of_repetition_spacing_in_the_practice_of_learning))：
 >
 > - (1) `$ I_1=C_1 $`
 > - (2) `$ I_i=I_{i-1}*C_2 $`
@@ -287,7 +287,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > 4. 在步骤 2 和 3 中，我们已经证明了 `$ r $` 和 `$ s $` 是独立的，因为没有函数 `$ g_1 $` 和 `$ g_2 $` 使得 `$ s=g_1(r) $` 或 `$ r=g_2(s) $`。这显然不意味着没有参数 `$ x $` 和函数 `$ y_s $` 和 `$ y_r $` 使得 `$ s=y_s(x) $` 和 `$ r=y_r(x) $`。
 >
-> 5. 可以看出，`$ r $` 和 `$ s $` 足以计算最佳重复间隔(参见方程式(1)及(2))。让我们首先假设以下两个函数 `$ f_r $` 和 `$ f_s $` 在s涉及记忆存储i的系统中是已知的：`$ r_i=f_r(s_i) $` 和 `$ s_i=f_s(s_{i-1}) $`。在我们的例子中，这些函数具有平凡的形式 `$ f_r：r_i=s_i $` 和 `$ f_s：s_i=s_{i-1}*C_2 $` (其中 `$ C_2 $` 是公式中的常量。(2)。在这种情况下，变量 `$ r $` 和 `$ s $` 足以在任何时刻 `$ t $` 以最佳重复间隔表示记忆。以下是重复间隔算法，它表明这是正确的：
+> 5. 可以看出，`$ r $` 和 `$ s $` 足以计算最佳重复间隔(参见公式(1)及(2))。让我们首先假设以下两个函数 `$ f_r $` 和 `$ f_s $` 在 s 涉及记忆存储 i 的系统中是已知的：`$ r_i=f_r(s_i) $` 和 `$ s_i=f_s(s_{i-1}) $`。在我们的例子中，这些函数具有平凡的形式 `$ f_r：r_i=s_i $` 和 `$ f_s：s_i=s_{i-1}*C_2 $` (其中 `$ C_2 $` 是公式(2)中的常量。在这种情况下，变量 `$ r $` 和 `$ s $` 足以在任何时刻 `$ t $` 以最佳重复间隔表示记忆。以下是重复间隔算法，它表明这是正确的：
 >
 >    1. 假设变量 `$ r_i $` 和 `$ s_i $` 描述第 i 次重复后的记忆状态
 >    2. 时间流逝 `$ r_i $`
