改正下标错误

--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -259,7 +259,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 >       		`$ s $` - length of the current optimum interval.
 >
-> 2. Just at the onset of the i-th repetition, `$ r=0 $`, while `$ s_i>s_i-1>0 $` (`$ s_i $` denotes `$ s $` right at the onset of the i-th repetition). This indicates that there is no function `$ g_1 $` such that `$ s=g_1(r) $`, i.e. `$ s $` cannot be a function of `$ r $` only.
+> 2. Just at the onset of the i-th repetition, `$ r=0 $`, while `$ s_i>s_{i-1}>0 $` (`$ s_i $` denotes `$ s $` right at the onset of the i-th repetition). This indicates that there is no function `$ g_1 $` such that `$ s=g_1(r) $`, i.e. `$ s $` cannot be a function of `$ r $` only.
 >
 > 3. During the inter-repetition interval, `$ r(t_1)<>r(t_2) $` if `$ t_1<>t_2 $` (`$ t $` denotes time and `$ r(t) $` denotes `$ r $` at the moment `$ t $`). On the other hand, `$ s(t_1)=s(t_2) $` (`$ s(t) $` denotes `$ s $` at the moment `$ t $`). This shows that there is no function `$ g_2 $` such that `$ r=g_2(s) $`, or we would have: `$ r(t_1)=g_2(s(t_1))=g_2(s(t_2))=r(t_2) $`, which leads to a contradiction. `$ r $` cannot be a function of `$ s $` only.
 >
@@ -281,7 +281,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 >       		`$ s $` - 当前最佳间隔的长度。
 >
-> 2. 仅在第 i 次重复开始时，`$ r=0 $`，而 `$ s_i>s_i-1>0 $` (`$ s_i $` 表示正好在第 i 次重复开始时的 `$ s $`)。这表明没有函数 `$ g_1 $` 使得 `$ s=g_1(R) $`，即 `$ s $` 不能只是 `$ r $` 的函数。
+> 2. 仅在第 i 次重复开始时，`$ r=0 $`，而 `$ s_i>s_{i-1}>0 $` (`$ s_i $` 表示正好在第 i 次重复开始时的 `$ s $`)。这表明没有函数 `$ g_1 $` 使得 `$ s=g_1(R) $`，即 `$ s $` 不能只是 `$ r $` 的函数。
 >
 > 3. 在重复间隔期间，`$ r(t_1)<>r(t_2) $` 当 `$ t_1<>t_2 $` (`$ t $` 表示时间，`$ r(t) $` 表示时刻 `$ t $`)。另一方面，`$ s(t_1)=s(t_2) $` (`$ s(t) $` 表示此时的 `$ s $`)。这表明不存在函数 `$ g_2 $` 使得 `$ r=g_2(s) $`，否则我们将有：`$ r(t_1)=g_2(s(t_1))=g_2(s(t_2))=r(t_2) $`，这导致了一个矛盾。`$ r $` 不能仅是 `$ s $` 的函数。
 >
